// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`length: 1 test - With string callback initialValues 1`] = `
Array [
  "string",
]
`;

exports[`length: 2 test - With math callback initialValues 1`] = `
Array [
  8,
  8,
]
`;
